:lipstick: add scrollbar for firefox also added file size for progress (on hover) and fixed some width/text-wrapping issues for a file element

--- a/src/components/Files/Files.module.scss
+++ b/src/components/Files/Files.module.scss
@@ -10,7 +10,7 @@
 .files {
   height: 100%;
   width: 100%;
-  overflow-x: hidden;
+  overflow-x: auto;
   overflow-y: scroll;
   position: relative;
   background: $bg;
